2008-06-07  Marcus D. Hanwell  <marcus@cryos.org>

	* avogadro/CMakeLists.txt, libavogadro/CMakeLists.txt: Bumped version
	to 0.8.2 now trunk is open for changes again.

2008-06-06  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/tools/selectrotatetool.cpp: When selecting residues,
	also select the bonds.

	* libavogadro/src/extensions/hydrogenextension.*: Added "Add Hydrogens
	for pH...".

2008-06-06  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/orbitalextension.cpp: Added calls to tr
	for i18n, thanks to Louis Ricard in bug 1986689.

	* libavogadro/src/primitive.cpp: Tweaked the calling order for the
	signals.

2008-06-05  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/gaussianinputdialog.*: Finally added the
	z-matrix support from Michael Banck in bug 1954332.

	* libavogadro/src/extensions/gamessinputdialog.ui: Reduced the
	vertical size of the GAMESS dialog, fixes bug 1982113.

2008-06-04  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/engines/surfaceengine.cpp: Scale numBoxes with
	quality.

	* libavogadro/src/engines/surfaceengine.cpp: Instead of iterating over
	all atoms for each grid point, iterate over all atoms once and only
	update grid points around the atom. This is 100-200x times faster...

2008-06-04  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glwidget.cpp: Added more verbosity to the engine
	loading in order to help diagnose issues.

	* libavogadro/src/engines/ribbonengine.cpp: Fixed issue with atom IDs
	not getting trimmed and the ribbon not being displayed.

	* libavogadro/src/engines/orbitalengine.*: Actually draw the extents of
	the cube if requested to.

	* libavogadro/src/engines/surfaceengine.*: Added a quick render and
	render transparent function.

	* libavogadro/src/engines/sphereengine.*: Added a quick render
	function to fix rendering when quick draw is used.

	* avogadro/src/addenginedialog.cpp: Fixes bug 1984080 - the added