@@ -25,8 +25,15 @@ set(LINK_LIBS "avogadro-lib")
 #set(templateextension_SRCS templateextension.cpp)
 #qt4_automoc(${templateextension_SRCS})
 #add_library(templateextension MODULE ${templateextension_SRCS})
-#target_link_libraries(h2methylextension ${LINK_LIBS})
+#target_link_libraries(templateextension ${LINK_LIBS})
 #install(TARGETS templateextension DESTINATION ${DESTINATION_DIR})
+
+### 2D overlay extensions
+set(overlayextension_SRCS overlayextension.cpp)
+qt4_automoc(${overlayextension_SRCS})
+add_library(overlayextension MODULE ${overlayextension_SRCS})
+target_link_libraries(overlayextension ${LINK_LIBS})
+install(TARGETS overlayextension DESTINATION ${DESTINATION_DIR})
 
 ### gamess
 set(gamessextension_SRCS gamessextension.cpp
@@ -80,7 +87,7 @@ target_link_libraries(hydrogensextension ${LINK_LIBS})
 install(TARGETS hydrogensextension DESTINATION ${DESTINATION_DIR})
 
 ### Selections
-set(selectextension_SRCS selectextension.cpp)
+set(selectextension_SRCS selectextension.cpp namedselectionmodel.cpp)
 qt4_automoc(${selectextension_SRCS})
 add_library(selectextension MODULE ${selectextension_SRCS})
 target_link_libraries(selectextension ${LINK_LIBS})
