@@ -1,3 +1,10 @@
+2008-06-08  Tim Vandermeersch  <tim.vandermeersch@gmail.com>
+
+	* libavogadro/src/glwidget.*: Add resized() signal.
+
+	* libavogadro/src/extensions/overlayextension.*: 2D overlay extension
+	for displaying ESP gradient, 2D representations, ???
+
 2008-06-07  Marcus D. Hanwell  <marcus@cryos.org>
 
 	* avogadro/CMakeLists.txt, libavogadro/CMakeLists.txt: Bumped version
